--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta name="description" content="Thomas Edison Senior Projects Pds 5-6">
     <meta name="keywords" content="Thomas Edison, Thomas Edison CTE HS, Jamaica, NY">
     <meta name="author" content="Saima Sabur">
-
     <title>
-      Thomas A. Edison CTE High School Period 5-6
+      Saima's Senior Profile
     </title>
   </head>
+
+  <body>
+    <h1>Today is Wednesday, September 13th, CFM Activity!</h1>
+    <ul>
+      <li>do homework</li>
+      <li>study for quiz</li>
+      <li>do laundry</li>
+      <li>clean room</li>  
+    </ul>
+  </body>
 </html>
