--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
       Saima's Senior Profile
     </title>
   </head>
-
+<a href="saimasabur3.github.io/Intuition-Test">Intuition Game</a>
   
 </html>
