--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     </title>
   </head>
 <a href="saimasabur3.github.io/Intuition-Test">Intuition Game</a>
+
+<a href="https://saimasabur3.github.io/Saimas-Quiz-Game">Which Character From The O.C Are You?</a>
   
 </html>
